--- a/src/widgets/cta/UI/styles.module.scss
+++ b/src/widgets/cta/UI/styles.module.scss
@@ -4,29 +4,29 @@
   // margin: 50px 0;
   grid-template: 1fr / 1fr 1fr;
 
-  margin-top: var(--margin-section-xl-top);
-  margin-bottom: var(--margin-section-xl-bottom);
+  margin-top: calc(var(--margin-section-xl) / 2);
+  margin-bottom: var(--margin-section-xl);
 
   @media (max-width: 992px) {
-    margin-top: var(--margin-section-lg-top);
-    margin-bottom: var(--margin-section-lg-bottom);
+    margin-top: calc(var(--margin-section-lg) / 2);
+    margin-bottom: var(--margin-section-lg);
     grid-template: 1fr 1fr / 1fr;
   }
 
   @media (max-width: 768px) {
-    margin-top: var(--margin-section-md-top);
-    margin-bottom: var(--margin-section-md-bottom);
+    margin-top: calc(var(--margin-section-md) / 2);
+    margin-bottom: var(--margin-section-md);
     grid-template: none;
   }
 
   @media (max-width: 576px) {
-    margin-top: var(--margin-section-sm-top);
-    margin-bottom: var(--margin-section-sm-bottom);
+    margin-top: calc(var(--margin-section-sm) / 2);
+    margin-bottom: var(--margin-section-sm);
   }
 
   @media (max-width: 375px) {
-    margin-top: var(--margin-section-xs-top);
-    margin-bottom: var(--margin-section-xs-bottom);
+    margin-top: calc(var(--margin-section-xs) / 2);
+    margin-bottom: var(--margin-section-xs);
   }
 
   &__image {
@@ -38,43 +38,43 @@
   .cta {
     display: grid;
     grid-auto-flow: row;
-    row-gap: var(--row-gap-xl-content);
+    row-gap: var(--row-gap-content-xl);
 
     @media (max-width: 992px) {
-      row-gap: var(--row-gap-lg-content);
+      row-gap: var(--row-gap-content-lg);
     }
 
     @media (max-width: 768px) {
-      row-gap: var(--row-gap-md-content);
+      row-gap: var(--row-gap-content-md);
     }
 
     @media (max-width: 576px) {
-      row-gap: var(--row-gap-sm-content);
+      row-gap: var(--row-gap-content-sm);
     }
 
     @media (max-width: 375px) {
-      row-gap: var(--row-gap-xs-content);
+      row-gap: var(--row-gap-content-xs);
     }
 
     &__content {
       display: grid;
       grid-auto-flow: row;
-      row-gap: var(--row-gap-xl-title);
+      row-gap: var(--row-gap-title-xl);
 
       @media (max-width: 992px) {
-        row-gap: var(--row-gap-lg-title);
+        row-gap: var(--row-gap-title-lg);
       }
 
       @media (max-width: 768px) {
-        row-gap: var(--row-gap-md-title);
+        row-gap: var(--row-gap-title-md);
       }
 
       @media (max-width: 576px) {
-        row-gap: var(--row-gap-sm-title);
+        row-gap: var(--row-gap-title-sm);
       }
 
       @media (max-width: 375px) {
-        row-gap: var(--row-gap-xs-title);
+        row-gap: var(--row-gap-title-xs);
       }
 
       &__title {
@@ -82,22 +82,22 @@
         font-style: normal;
         font-weight: 700;
         line-height: normal;
-        font-size: var(--font-size-xl-title-main);
+        font-size: var(--font-size-title-main-xl);
 
         @media (max-width: 992px) {
-          font-size: var(--font-size-lg-title-main);
+          font-size: var(--font-size-title-main-lg);
         }
 
         @media (max-width: 768px) {
-          font-size: var(--font-size-md-title-main);
+          font-size: var(--font-size-title-main-md);
         }
 
         @media (max-width: 576px) {
-          font-size: var(--font-size-sm-title-main);
+          font-size: var(--font-size-title-main-sm);
         }
 
         @media (max-width: 375px) {
-          font-size: var(--font-size-xs-title-main);
+          font-size: var(--font-size-title-main-xs);
         }
       }
 
@@ -107,22 +107,22 @@
         line-height: normal;
         color: var(--Personal-colors-main);
         background-clip: text;
-        font-size: var(--font-size-xl-subtitle-main);
+        font-size: var(--font-size-subtitle-main-xl);
 
         @media (max-width: 992px) {
-          font-size: var(--font-size-lg-subtitle-main);
+          font-size: var(--font-size-subtitle-main-lg);
         }
 
         @media (max-width: 768px) {
-          font-size: var(--font-size-md-subtitle-main);
+          font-size: var(--font-size-subtitle-main-md);
         }
 
         @media (max-width: 576px) {
-          font-size: var(--font-size-sm-subtitle-main);
+          font-size: var(--font-size-subtitle-main-sm);
         }
 
         @media (max-width: 375px) {
-          font-size: var(--font-size-xs-subtitle-main);
+          font-size: var(--font-size-subtitle-main-xs);
         }
       }
     }
