--- a/src/entities/customerCard/UI/styles.module.scss
+++ b/src/entities/customerCard/UI/styles.module.scss
@@ -3,13 +3,18 @@
   grid-template: 0.3fr 1fr / 1fr;
   align-content: space-between;
   align-items: start;
-  border-radius: 12px 12px 0px 12px;
-  background: linear-gradient(
-    90deg,
-    rgba(71, 113, 230, 0.1) 0.03%,
-    rgba(142, 84, 233, 0.1) 100.36%
-  );
+  // border-radius: 12px 12px 0px 12px;
+  // background: linear-gradient(
+  //   90deg,
+  //   rgba(71, 113, 230, 0.1) 0.03%,
+  //   rgba(142, 84, 233, 0.1) 100.36%
+  // );
   padding: 20px;
+
+  border-radius: 12px;
+  border: 1px solid var(--black-10, #e5e5e5);
+  background: var(--Personal-colors-White, #fff);
+  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.19);
 
   .customer__row {
     display: grid;
@@ -25,8 +30,8 @@
     }
 
     .customer__column {
-      white-space: nowrap;
-      overflow: hidden;
+      // white-space: nowrap;
+      // overflow: hidden;
 
       .title {
         color: var(--Personal-colors-black);
@@ -34,9 +39,9 @@
         font-style: normal;
         font-weight: 600;
         line-height: normal;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+        // white-space: nowrap;
+        // overflow: hidden;
+        // text-overflow: ellipsis;
       }
 
       .workplace {
@@ -44,9 +49,9 @@
         font-weight: 500;
         font-style: italic;
         margin-bottom: 5px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+        // white-space: nowrap;
+        // overflow: hidden;
+        // text-overflow: ellipsis;
       }
 
       .rating {
@@ -63,6 +68,6 @@
     font-weight: 500;
     line-height: normal;
     height: 150px;
-    overflow: auto;
+    // overflow: auto;
   }
 }
