--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -121,24 +121,26 @@ body {
 
 .container {
   max-width: var(--container-width);
-  // padding: 0 var(--container-padding-side);
-
   padding: 0 var(--container-padding-xl-side);
   margin: 0 auto;
 
   @media (max-width: 992px) {
+    // max-width: var(--breakpoint-lg);
     padding: 0 var(--container-padding-lg-side);
   }
 
   @media (max-width: 768px) {
+    // max-width: var(--breakpoint-md);
     padding: 0 var(--container-padding-md-side);
   }
 
   @media (max-width: 576px) {
+    // max-width: var(--breakpoint-sm);
     padding: 0 var(--container-padding-sm-side);
   }
 
   @media (max-width: 375px) {
+    // max-width: var(--breakpoint-xs);
     padding: 0 var(--container-padding-xs-side);
   }
 }
@@ -307,6 +309,29 @@ body {
   pointer-events: none;
   // background: var(--Inside-container);
   // filter: grayscale(100%);
+}
+
+// .swiper-wrapper{
+//   display: grid;
+//   grid-auto-flow: column;
+// }
+
+.swiper {
+  margin: 0;
+  padding: 20px 8px;
+  // margin: 10px;
+}
+
+.slide__price {
+  display: grid;
+  filter: blur(2.5px);
+
+  &.swiper-slide-active {
+    filter: none !important;
+    border-radius: 40px 40px 0px 40px;
+    border: 2px solid #4772e6;
+    box-shadow: 0px 4px 21px 0px rgba(144, 71, 237, 0.21);
+  }
 }
 
 .border__gradient {
