--- a/src/entities/postDisplay/postDispayTelegram/UI/telegramMedia/ui/styles.module.scss
+++ b/src/entities/postDisplay/postDispayTelegram/UI/telegramMedia/ui/styles.module.scss
@@ -2,7 +2,6 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   grid-auto-rows: auto;
-  margin: -2px;
   margin-bottom: 0px;
   padding-bottom: 3px;
   border-radius: 10px;
@@ -12,6 +11,8 @@
   height: 100%;
 
   > div {
+    position: relative;
+
     &:nth-child(3n) {
       grid-column: span 2;
     }
@@ -22,6 +23,11 @@
   }
 
   img {
+    width: 100%;
+    height: 100%;
+  }
+
+  video {
     width: 100%;
     height: 100%;
   }
