feat: some fixes in postDisplay

--- a/src/features/postPlatform/UI/styles.module.scss
+++ b/src/features/postPlatform/UI/styles.module.scss
@@ -70,6 +70,7 @@
   grid-auto-flow: column;
   column-gap: 10px;
   align-items: center;
+  cursor: pointer;
   // justify-content: center;
 
   p {
