--- a/src/entities/postDisplay/postDispayInstagram/UI/styles.module.scss
+++ b/src/entities/postDisplay/postDispayInstagram/UI/styles.module.scss
@@ -107,7 +107,8 @@
       padding-bottom: 60px;
       background: #202020;
       margin: 9px 11px;
-      border-radius: 53.5px;
+      // border-radius: 53.5px;
+      border-radius: 3vw;
 
       .content {
         height: 100%;
