--- a/src/entities/postDisplay/postDispayTelegram/UI/styles.module.scss
+++ b/src/entities/postDisplay/postDispayTelegram/UI/styles.module.scss
@@ -96,7 +96,8 @@
       padding-bottom: 60px;
       background: #142530;
       margin: 9px 11px;
-      border-radius: 53.5px;
+      // border-radius: 53.5px;
+      border-radius: 3vw;
 
       .content {
         height: 100%;
