--- a/src/entities/postDisplay/postDispayTelegram/UI/telegramMedia/ui/styles.module.scss
+++ b/src/entities/postDisplay/postDispayTelegram/UI/telegramMedia/ui/styles.module.scss
@@ -25,10 +25,12 @@
   img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
   }
 
   video {
     width: 100%;
     height: 100%;
+    object-fit: cover;
   }
 }
