--- a/src/features/priceList/UI/styles.module.scss
+++ b/src/features/priceList/UI/styles.module.scss
@@ -12,18 +12,18 @@
     // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 
-  @media (max-width: 992px) {
-    display: none;
-  }
+  // @media (max-width: 992px) {
+  //   display: none;
+  // }
 }
 
 .carousel {
   overflow: hidden;
-  display: none;
+  // display: none;
 
-  @media (max-width: 992px) {
-    display: block;
-  }
+  // @media (max-width: 992px) {
+  //   display: block;
+  // }
 
   .wrapper {
     display: grid;
