--- a/src/entities/postDisplay/postDispayTelegram/UI/telegramFile/ui/styles.module.scss
+++ b/src/entities/postDisplay/postDispayTelegram/UI/telegramFile/ui/styles.module.scss
@@ -8,6 +8,7 @@
   font-size: 12px;
   border-radius: 10px 10px 10px 0px;
   position: relative;
+  cursor: pointer;
 
   &__title {
     padding: 0px 5px;
