feat: some fixes

--- a/src/widgets/customers/UI/styles.module.scss
+++ b/src/widgets/customers/UI/styles.module.scss
@@ -38,6 +38,7 @@
 
     @media (max-width: 576px) {
       font-size: var(--font-size-title-main-sm);
+      text-align: center;
     }
 
     @media (max-width: 375px) {
