--- a/src/entities/priceCard/UI/styles.module.scss
+++ b/src/entities/priceCard/UI/styles.module.scss
@@ -12,10 +12,22 @@
   //   border: 2px solid var(--Personal-colors-main);
   // }
 
+  @media (max-width: 576px) {
+    padding: 20px;
+  }
+
   .content {
     display: grid;
     grid-auto-flow: row;
     row-gap: 20px;
+
+    @media (max-width: 576px) {
+      row-gap: 10px;
+    }
+
+    button {
+      padding: 10px;
+    }
 
     .title {
       color: var(--Personal-colors-black);
@@ -48,6 +60,14 @@
       font-style: normal;
       font-weight: 500;
       line-height: normal;
+
+      @media (max-width: 576px) {
+        font-size: 16px;
+      }
+
+      @media (max-width: 375px) {
+        font-size: 14px;
+      }
     }
 
     .price {
